# katakomba

./: .gitignore  CITATION.bib  Dockerfile  README.md  bc_chaotic_lstm.py  bc_dummy.py  cql_chaotic_lstm.py  guide.py  loader_benchmark.py  requirements.txt  run.sh  setup.py  test_chaotic_loader.py
algorithms/: bc_chaotic_lstm.py  bc_perceiver_lstm.py  bc_perceiver_lstm_prev_act.py  bc_resnet_lstm.py  bc_resnet_lstm_prev_act.py  minihack_bc_chaotic_lstm.py  minihack_bc_resnet_lstm.py  nle_bc_chaotic_haste.py  nle_bc_chaotic_lstm.py  rem_chaotic_lstm.py  rem_resnet_lstm.py
algorithms/small_scale/: awac_chaotic_lstm.py  bc_chaotic_lstm.py  cql_chaotic_lstm.py  iql_chaotic_lstm.py  iql_chaotic_lstm_discrete.py  rem_chaotic_lstm.py
algoritms/: bc_resnet_lstm.py
configs/: bc_chaotic_lstm.yaml
configs/sweeps/: small_scale_awac_chaotic_lstm.yaml  small_scale_bc_chaotic_lstm.yaml  small_scale_cql_chaotic_lstm.yaml  small_scale_cql_chaotic_lstm_sweep.yaml  small_scale_iql_chaotic_lstm.yaml  small_scale_rem_chaotic_lstm.yaml
d5rl/: __init__.py  dataset.py  tasks.py
d5rl/datasets/: __init__.py  autoascend.py  base.py  builder.py  encoder_autoascend.py  sa_autoascend.py  sa_chaotic_autoascend.py  sars_autoascend.py  state_autoascend.py
d5rl/envs/: __init__.py  builder.py  envs.py
d5rl/nn/: resnet.py
katakomba/: __init__.py  env.py  tasks.py
katakomba/utils/render_utils/: CMakeLists.txt  setup.py
requirements/: requirements.txt
scripts/: convert_nle_data.py  generate.sh  generate_small_dataset.py  guide.py  rliable_report.py  scores.py  test_chaotic_loader.py
(+60 files in other folders)
